# swisslaw-scraping

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
resource/: fedlex-data-admin-ch-eli-cc-2015-799-20151118-fr-xml-4.xml
resources/: fedlex-data-admin-ch-eli-cc-2007-178-20120101-fr-xml-1.xml
scripts/: export_vector_db.py  generate_documents.py  generate_vectors.py  import_vector_db.py  init_vector_db.py  load-laws.py  load_laws.py  populate_vector_db.py  prepare_document.py  scrape-links.py  scrape_links.py  search_tf_idf.py  search_vector_db.py
src/: embedding.py  helpers.py
