[tool.poetry]
name = "swisslawscraping"
version = "0.1.0"
description = ""
authors = ["Christophe <chris-ch@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

packages = [
    {include = "**/*.py", from="src"},
    {include = "**/*.py", from="scripts"},
]

include = [
    { path = "resources/**/*", format = "sdist" },
    { path = "resources/**/*", format = "wheel" },
]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
playwright = "^1.47.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
chromadb = "^0.5.16"
langchain = "^0.3.6"
mistralai = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
scrape-links = "scripts.scrape_links:main"
load-laws = "scripts.load_laws:main"
generate-documents = "scripts.generate_documents:main"
populate-db = "scripts.populate_vector_db:main"
search-db = "scripts.search_vector_db:main"
playwright = "playwright.__main__:main"
